v3 full requirement